--- a/css/custommina.css
+++ b/css/custommina.css
@@ -1,3 +1,12 @@
-h1{
-    color: whitesmoke;
+body {
+    background-color: #F08144 !important;
 }
+.navbar {
+background-color: #F08144 !important;
+}
+.navbar-brand {
+    color: whitesmoke !important;
+}
+.container {
+    display: flex;
+  }
